--- a/index.html
+++ b/index.html
@@ -10,5 +10,20 @@
 			<p><em><center>pcrowe@hawk.iit.edu | (630)-841-8896</center></em></p>
 			<p><em><center>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</center></em></p>
 		</header>
+		<hr>
+		<section>
+			<h2>Education</h2>
+			<h3>Illinois Institute of Technology</h3>
+			<table>
+				<tr>
+					<td>Major: Computer Science</td>
+					<td>Chicago, IL</td>
+				</tr>
+				<tr>
+					<td>GPA: 3.6</td>
+					<td>May 2022</td>
+				</tr>
+			</table>
+		</section>
 	</body>
 </html>
