--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			<h3>Illinois Institute of Technology</h3>
 			<table>
 				<tr>
-					<td>Major: Computer Science</td>
+					<td colspan="2">Major: Computer Science</td>
 					<td>Chicago, IL</td>
 				</tr>
 				<tr>
-					<td>GPA: 3.6</td>
+					<td colspan="2">GPA: 3.6</td>
 					<td>May 2022</td>
 				</tr>
 			</table>
