--- a/index.html
+++ b/index.html
@@ -16,17 +16,14 @@
 			<h3>Illinois Institute of Technology</h3>
 			<table>
 				<tr>
-					<td colspan="2">Major: Computer Science</td>
+					<td>Major: Computer Science</td>
+					<td>----</td>
 					<td>Chicago, IL</td>
 				</tr>
 				<tr>
-					<td colspan="2">GPA: 3.6</td>
+					<td>GPA: 3.6</td>
+					<td>----</td>
 					<td>May 2022</td>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
 				</tr>
 			</table>
 		</section>
