--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 					<td>May 2022</td>
 				</tr>
 			</table>
+			<h3>Benet Academy</h3>
+			<table>
+				<tr>
+					<td>ACT: 33</td>
+					<td>----</td>
+					<td>Lisle, IL</td>
+				</tr>
+				<tr>
+					<td>GPA: 4.0</td>
+					<td>----</td>
+					<td>June 2018</td>
+				</tr>
+			</table>
 		</section>
 	</body>
 </html>
