Added experience section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<p><em><center>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</center></em></p>
 		</header>
 		<hr>
+		
 		<section>
 			<h2>Education</h2>
 			<h3>Illinois Institute of Technology</h3>
@@ -39,6 +40,32 @@
 					<td>June 2018</td>
 				</tr>
 			</table>
+		</section>
+		
+		<section>
+			<h2>Experience</h2>
+			<table>
+				<tr>
+					<th>Introduction to Engineering Systems 1</th>
+					<td>----</td>
+					<td>Notre Dame, IN</td>
+				</tr>
+				<tr>
+					<td><em>Controlled Descent Project, Team member</em></td>
+					<td>----</td>
+					<td>Aug-Nov 2018</td>
+				</tr>
+			</table>
+			<ul>
+				<li>Designed functional parachute device</li>
+				<li>Organized meetings with group members</li>
+				<li>Delivered clear report on device's functionality, including Excel charts and tables</li>
+			</ul>
+			<p><em>Iterative Design Project, Team member</em></p>
+			<ul>
+				<li>Drafted designs of picture frame with Solidworks software</li>
+			</ul>
+			
 		</section>
 	</body>
 </html>
