--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<hr>
 		
 		<section>
-			<h2>Education</h2>
+			<h2><em>Education</em></h2>
 			<h3>Illinois Institute of Technology</h3>
 			<table>
 				<tr>
@@ -43,7 +43,7 @@
 		</section>
 		
 		<section>
-			<h2>Experience</h2>
+			<h2><em>Experience</em></h2>
 			<table>
 				<tr>
 					<th>Introduction to Engineering Systems 1</th>
@@ -65,7 +65,17 @@
 			<ul>
 				<li>Drafted designs of picture frame with Solidworks software</li>
 			</ul>
-			
+			<table>
+				<tr>
+					<th>Personal Website</th>
+					<td>----</td>
+					<td>Oct 2018-Present</td>
+				</tr>
+			</table>
+			<ul>
+				<li>Coded with HTML, CSS, JavaScript, and jQuery</li>
+				<li>Contains personal writing projects and code experiments</li>
+			</ul>
 		</section>
 	</body>
 </html>
