--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 			<ul>
 				<li>Drafted designs of picture frame with Solidworks software</li>
 			</ul>
+			
 			<table>
 				<tr>
 					<th>Personal Website</th>
@@ -76,6 +77,44 @@
 				<li>Coded with HTML, CSS, JavaScript, and jQuery</li>
 				<li>Contains personal writing projects and code experiments</li>
 			</ul>
+			
+			<table>
+				<tr>
+					<th>Introductino to Engineering Systems 2</th>
+					<td>----</td>
+					<td>Jan-May 2019</td>
+				</tr>
+			</table>
+			<ul>
+				<li>Coded in MATLAB for mathematical simulations</li>
+				<li>Created intelligent database-sorting software with team</li>
+			</ul>
+			
+			<p><strong>Embedded Systems and the Internet of Things</strong></p>
+			<ul>
+				<li>Physical wiring and digital programming with Arduino and C language</li>
+				<li>Built a simple electric piano using push buttons, LEDs, and piezos</li>
+			</ul>
+			
+			<p><strong>CompTIA A+</strong></p>
+			<p><em>Online Course Completed</em></p>
+			<p>Simple hardware knowledge</p>
+			
+			<p><strong>CompTIA Linux+</strong></p>
+			<p><em>Online Course Completed</em></p>
+			<p>Basic Linux knowledge</p>
+			
+			<p><strong>CompTIA Network+</strong></p>
+			<p><em>Online Course Completed</em></p>
+			<p>Basic computer network and security knowledge</p>
+			
+			<table>
+				<tr>
+					<th>Advanced Introduction to Computer Science</th>
+					<td>----</td>
+					<td>Illinois Tech, IL</td>
+				</tr>
+			</table>
 		</section>
 	</body>
 </html>
