Attempted to create an odd table row

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 			<ul>
 				<li>Coded with HTML, CSS, JavaScript, and jQuery</li>
 				<li>Contains personal writing projects and code experiments</li>
+				<li><a href="https://pcrowe22.github.io/Bibliotech/index.html">Link</a></li>
 			</ul>
 			
 			<table>
@@ -113,6 +114,15 @@
 					<th>Advanced Introduction to Computer Science</th>
 					<td>----</td>
 					<td>Illinois Tech, IL</td>
+				</tr>
+				<tr>
+					<td>
+						<ul>
+							<li>Practice with Java in Eclipse and GitHub</li>
+						</ul>
+					</td>
+					<td>----</td>
+					<td>Aug-Dec 2019</td>
 				</tr>
 			</table>
 		</section>
