Added Employment table

--- a/index.html
+++ b/index.html
@@ -125,6 +125,48 @@
 					<td>Aug-Dec 2019</td>
 				</tr>
 			</table>
+			
+			<p><strong>Fundamentals of Web Design</strong></p>
+			<ul>
+				<li>Practice with HTML, CSS, and JavaScript in Notepad+ and GitHub</li>
+			</ul>
 		</section>
+		
+		<section>
+			<h2><em>Employment</em></h2>
+			<table>
+				<tr>
+					<th>Company</th>
+					<th>Position</th>
+					<th>Time of Employment</th>
+					<th>Location</th>
+				</tr>
+				<tr>
+					<td>Pinstripes</td>
+					<td>Server Assistant</td>
+					<td>Sept 2019-Present</td>
+					<td>Chicago, IL</td>
+				</tr>
+				<tr>
+					<td>Capri of Downers Grove</td>
+					<td>Host/Bus Boy</td>
+					<td>May 2019-Aug 2019</td>
+					<td>Downers Grove, IL</td>
+				</tr>
+				<tr>
+					<td>South Dining Hall</td>
+					<td>Kitchen Worker</td>
+					<td>Aug 2018-May 2019</td>
+					<td>Notre Dame, IN</td>
+				</tr>
+				<tr>
+					<td>That Burger Joint</td>
+					<td>Kitchen Worker,Cashier</td>
+					<td>May 2018-Jan-2019</td>
+					<td>Downers Grove, IL</td>
+				</tr>
+			</table>
+		</section>
+			
 	</body>
 </html>
