Added an activities table

--- a/index.html
+++ b/index.html
@@ -167,6 +167,37 @@
 				</tr>
 			</table>
 		</section>
-			
+		
+		<section>
+			<h2><em>Activities</em></h2>
+			<table>
+				<tr>
+					<th>Specialty</th>
+					<th>Organization</th>
+					<th>Time Period</th>
+				</tr>
+				</tr>
+				<tr>
+					<td><em>Hardware</em></td>
+					<td>HAM Radio</td>
+					<td>Sept 2019-Present</td>
+				</tr>
+				<tr>
+					<td><em>Cybersecurity</em></td>
+					<td>Cyber Hawks</td>
+					<td>Aug 2019-Present</td>
+				</tr>
+				<tr>
+					<td><em>Programer</em></td>
+					<td>Free time</td>
+					<td>2018-Present</td>
+				</tr>
+				<tr>
+					<td><em>Leader</em></td>
+					<td>Muse Club</td>
+					<td>Aug 2014-2018</td>
+				</tr>
+			</table>
+		</section>
 	</body>
 </html>
