--- a/index.html
+++ b/index.html
@@ -199,5 +199,12 @@
 				</tr>
 			</table>
 		</section>
+		
+		<section>
+			<h2><em>Skills</em></h2>
+			<p><em>Computer:</em></p>
+			<p>Microsoft Office, Solidworks, Vernier Graphical Analysis, MATLAB, Java, Python, C, HTML, CSS, JavaScript, jQuery, GitHub</p>
+		</section>
+		<hr>
 	</body>
 </html>
