--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
 		<title>Project 1</title>
 	</head>
 	<body>
+		<aside>
+			<ul>
+				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
+				<li><a href=https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
+				<li><a href="">Third Link lol</a></li>
+			</ul>
+		</aside>
+	
 		<header>
-			<h1><center>Patrick Crowe</center></h1>
-			<p><em><center>pcrowe@hawk.iit.edu | (630)-841-8896</center></em></p>
-			<p><em><center>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</center></em></p>
+			<h1><!--<center>-->Patrick Crowe<!--</center>--></h1>
+			<p><!--<em><center>-->pcrowe@hawk.iit.edu | (630)-841-8896<!--</center></em>--></p>
+			<p><!--<em><center>-->5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616<!--</center></em>--></p>
 		</header>
 		<hr>
 		
 		<section>
-			<h2><em>Education</em></h2>
+			<h2><!--<em>-->Education<!--</em>--></h2>
 			<h3>Illinois Institute of Technology</h3>
 			<table>
 				<tr>
@@ -43,7 +51,7 @@
 		</section>
 		
 		<section>
-			<h2><em>Experience</em></h2>
+			<h2><!--<em>-->Experience<!--</em>--></h2>
 			<table>
 				<tr>
 					<th>Introduction to Engineering Systems 1</th>
@@ -61,7 +69,7 @@
 				<li>Organized meetings with group members</li>
 				<li>Delivered clear report on device's functionality, including Excel charts and tables</li>
 			</ul>
-			<p><em>Iterative Design Project, Team member</em></p>
+			<p><!--<em>-->Iterative Design Project, Team member<!--</em>--></p>
 			<ul>
 				<li>Drafted designs of picture frame with Solidworks software</li>
 			</ul>
@@ -98,15 +106,15 @@
 			</ul>
 			
 			<p><strong>CompTIA A+</strong></p>
-			<p><em>Online Course Completed</em></p>
+			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Simple hardware knowledge</p>
 			
 			<p><strong>CompTIA Linux+</strong></p>
-			<p><em>Online Course Completed</em></p>
+			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Basic Linux knowledge</p>
 			
 			<p><strong>CompTIA Network+</strong></p>
-			<p><em>Online Course Completed</em></p>
+			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Basic computer network and security knowledge</p>
 			
 			<table>
@@ -133,7 +141,7 @@
 		</section>
 		
 		<section>
-			<h2><em>Employment</em></h2>
+			<h2><!--<em>-->Employment<!--</em>--></h2>
 			<table>
 				<tr>
 					<th>Company</th>
@@ -169,7 +177,7 @@
 		</section>
 		
 		<section>
-			<h2><em>Activities</em></h2>
+			<h2><!--<em>-->Activities<!--</em>--></h2>
 			<table>
 				<tr>
 					<th>Specialty</th>
@@ -178,22 +186,22 @@
 				</tr>
 				</tr>
 				<tr>
-					<td><em>Hardware</em></td>
+					<td><!--<em>-->Hardware<!--</em>--></td>
 					<td>HAM Radio</td>
 					<td>Sept 2019-Present</td>
 				</tr>
 				<tr>
-					<td><em>Cybersecurity</em></td>
+					<td><!--<em>-->Cybersecurity<!--</em>--></td>
 					<td>Cyber Hawks</td>
 					<td>Aug 2019-Present</td>
 				</tr>
 				<tr>
-					<td><em>Programer</em></td>
+					<td><!--<em>-->Programer<!--</em>--></td>
 					<td>Free time</td>
 					<td>2018-Present</td>
 				</tr>
 				<tr>
-					<td><em>Leader</em></td>
+					<td><!--<em>-->Leader<!--</em>--></td>
 					<td>Muse Club</td>
 					<td>Aug 2014-2018</td>
 				</tr>
@@ -201,8 +209,8 @@
 		</section>
 		
 		<section>
-			<h2><em>Skills</em></h2>
-			<p><em>Computer:</em></p>
+			<h2><!--<em>-->Skills<!--</em>--></h2>
+			<p><!--<em>-->Computer:<!--</em>--></p>
 			<p>Microsoft Office, Solidworks, Vernier Graphical Analysis, MATLAB, Java, Python, C, HTML, CSS, JavaScript, jQuery, GitHub</p>
 		</section>
 		<hr>
