--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<aside>
 			<ul>
 				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
-				<li><a href=https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
+				<li><a href="https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
 				<li><a href="">Third Link lol</a></li>
 			</ul>
 		</aside>
@@ -59,7 +59,7 @@
 					<td>Notre Dame, IN</td>
 				</tr>
 				<tr>
-					<td><em>Controlled Descent Project, Team member</em></td>
+					<td><!--<em>-->Controlled Descent Project, Team member<!--</em>--></td>
 					<td>----</td>
 					<td>Aug-Nov 2018</td>
 				</tr>
