--- a/pictures.html
+++ b/pictures.html
@@ -5,6 +5,15 @@
 		<title>Pictures</title>
 	</head>
 	<body>
+		<aside>
+			<ul>
+				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
+				<li><a href="https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
+				<li><a href="">Third Link lol</a></li>
+			</ul>
+		</aside>
+		<hr>
 		<p>Some pictures about my life</p>
+		<img src="roxy.xcf">
 	</body>
 </html>
