Added two more pictures

--- a/pictures.html
+++ b/pictures.html
@@ -14,6 +14,17 @@
 		</aside>
 		<hr>
 		<p>Some pictures about my life</p>
-		<img src="roxy.png">
+		<figure>
+			<img src="roxy.png">
+			<figcaption>My dog Roxy is a brat.</figcaption>
+		</figure>
+		<figure>
+			<img src="trunk.JPG">
+			<figcaption>Now that I'm in college, all I need to live must fit in the back of a car</figcaption>
+		</figure>
+		<figure>
+			<img src="spotify.PNG">
+			<figcaption>I listen to alternative rock, but I'm constantly trying to expand my music taste.</figcaption>
+		</figure>
 	</body>
 </html>
