--- a/pictures.html
+++ b/pictures.html
@@ -9,7 +9,7 @@
 			<ul>
 				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
 				<li><a href="https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
-				<li><a href="">Third Link lol</a></li>
+				<li><a href="https://pcrowe22.github.io/project1/hobbies.html">Hobbies</a></li>
 			</ul>
 		</aside>
 		<hr>
