Tried fixing picutres

--- a/pictures.html
+++ b/pictures.html
@@ -13,7 +13,8 @@
 			</ul>
 		</aside>
 		<hr>
-		<p>Some pictures about my life</p>
+		<h1>My pictures</h1>
+		<h2>Some pictures about my life</h2>
 		<figure>
 			<img src="roxy.png">
 			<figcaption>My dog Roxy is a brat.</figcaption>
