--- a/hobbies.html
+++ b/hobbies.html
@@ -5,6 +5,17 @@
 		<title>Hobbies</title>
 	</head>
 	<body>
+		<aside>
+			<ul>
+				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
+				<li><a href="https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
+				<li><a href="https://pcrowe22.github.io/project1/hobbies.html">Hobbies</a></li>
+			</ul>
+		</aside>
+		<hr>
 		<h1>My Hobbies</h1>
+		<p>I am currently working on a point and click adventure game on my own side website for fun! It is set in my hometown neighborhood, and I record scenes for it with a pair of video camera glasses I wear while I walk.</p>
+		<p>Once on my walk I had a close encounter with a bird in flight. Check it out!</p>
+		<video src="bird.mp4" type="video/mp4"></video>
 	</body>
 </html>
