--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 	<body>
 		<aside>
 			<ul>
-				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
-				<li><a href="https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
-				<li><a href="https://pcrowe22.github.io/project1/hobbies.html">Hobbies</a></li>
+				<li><a href="project1/">Home</a></li>
+				<li><a href="pictures.html">Pictures</a></li>
+				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
 		</aside>
 	
@@ -99,21 +99,21 @@
 				<li>Created intelligent database-sorting software with team</li>
 			</ul>
 			
-			<p><strong>Embedded Systems and the Internet of Things</strong></p>
+			<p><!--<strong>-->Embedded Systems and the Internet of Things<!--</strong>--></p>
 			<ul>
 				<li>Physical wiring and digital programming with Arduino and C language</li>
 				<li>Built a simple electric piano using push buttons, LEDs, and piezos</li>
 			</ul>
 			
-			<p><strong>CompTIA A+</strong></p>
+			<p><!--<strong>-->CompTIA A+<!--</strong>--></p>
 			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Simple hardware knowledge</p>
 			
-			<p><strong>CompTIA Linux+</strong></p>
+			<p><!--<strong>-->CompTIA Linux+<!--</strong>--></p>
 			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Basic Linux knowledge</p>
 			
-			<p><strong>CompTIA Network+</strong></p>
+			<p><!--<strong>-->CompTIA Network+<!--</strong>--></p>
 			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Basic computer network and security knowledge</p>
 			
@@ -134,7 +134,7 @@
 				</tr>
 			</table>
 			
-			<p><strong>Fundamentals of Web Design</strong></p>
+			<p><!--<strong>-->Fundamentals of Web Design<!--</strong>--></p>
 			<ul>
 				<li>Practice with HTML, CSS, and JavaScript in Notepad+ and GitHub</li>
 			</ul>
