--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<aside>
 			<ul>
-				<li><a href="project1/">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="pictures.html">Pictures</a></li>
 				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
