--- a/pictures.html
+++ b/pictures.html
@@ -7,9 +7,9 @@
 	<body>
 		<aside>
 			<ul>
-				<li><a href="https://pcrowe22.github.io/project1/">Home</a></li>
-				<li><a href="https://pcrowe22.github.io/project1/pictures.html">Pictures</a></li>
-				<li><a href="https://pcrowe22.github.io/project1/hobbies.html">Hobbies</a></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pictures.html">Pictures</a></li>
+				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
 		</aside>
 		<hr>
