--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
 		<h1>My Hobbies</h1>
 		<p>I am currently working on a point and click adventure game on my own side website for fun! It is set in my hometown neighborhood, and I record scenes for it with a pair of video camera glasses I wear while I walk.</p>
 		<p>Once on my walk I had a close encounter with a bird in flight. Check it out!</p>
-		<video width="800" height="400">
+		<video width="800" height="400" controls>
 			<source src="bird.mp4" type="video/mp4">
 		</video>
 	</body>
