Made corrections according to comments

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<title>Project 1</title>
 	</head>
 	<body>
-		<aside>
+		<nav>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="pictures.html">Pictures</a></li>
 				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
-		</aside>
+		</nav>
 	
 		<header>
 			<h1><!--<center>-->Patrick Crowe<!--</center>--></h1>
@@ -22,48 +22,48 @@
 		
 		<section>
 			<h2><!--<em>-->Education<!--</em>--></h2>
-			<h3>Illinois Institute of Technology</h3>
-			<table>
+			<h3>Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
+			<!--<table>
 				<tr>
-					<td>Major: Computer Science</td>
+					<td>--><p>Major: Computer Science</p><!--</td>
 					<td>----</td>
 					<td>Chicago, IL</td>
 				</tr>
 				<tr>
-					<td>GPA: 3.6</td>
+					<td>--><p>GPA: 3.6</p><!--</td>
 					<td>----</td>
 					<td>May 2022</td>
 				</tr>
-			</table>
-			<h3>Benet Academy</h3>
-			<table>
+			</table>-->
+			<h3>Benet Academy ---- Lisle, IL ---- May 2018</h3>
+			<!--<table>
 				<tr>
-					<td>ACT: 33</td>
+					<td>--><p>ACT: 33</p><!--</td>
 					<td>----</td>
 					<td>Lisle, IL</td>
 				</tr>
 				<tr>
-					<td>GPA: 4.0</td>
+					<td>--><p>GPA: 4.0</p><!--</td>
 					<td>----</td>
 					<td>June 2018</td>
 				</tr>
-			</table>
+			</table>-->
 		</section>
 		
 		<section>
 			<h2><!--<em>-->Experience<!--</em>--></h2>
-			<table>
+			<!--<table>
 				<tr>
-					<th>Introduction to Engineering Systems 1</th>
+					<th>--><h4>Introduction to Engineering Systems 1 ---- Notre Dame, IN ---- Aug-Nov 2018</h4><!--</th>
 					<td>----</td>
 					<td>Notre Dame, IN</td>
 				</tr>
 				<tr>
-					<td><!--<em>-->Controlled Descent Project, Team member<!--</em>--></td>
+					<td>--><!--<em>--><h5>Controlled Descent Project, Team member</h5><!--</em>--><!--</td>
 					<td>----</td>
 					<td>Aug-Nov 2018</td>
 				</tr>
-			</table>
+			</table>-->
 			<ul>
 				<li>Designed functional parachute device</li>
 				<li>Organized meetings with group members</li>
@@ -74,26 +74,26 @@
 				<li>Drafted designs of picture frame with Solidworks software</li>
 			</ul>
 			
-			<table>
+			<!--<table>
 				<tr>
-					<th>Personal Website</th>
+					<th>--><h4>Personal Website ---- Oct 2018-Present</h4><!--</th>
 					<td>----</td>
 					<td>Oct 2018-Present</td>
 				</tr>
-			</table>
+			</table>-->
 			<ul>
 				<li>Coded with HTML, CSS, JavaScript, and jQuery</li>
 				<li>Contains personal writing projects and code experiments</li>
 				<li><a href="https://pcrowe22.github.io/Bibliotech/index.html">Link</a></li>
 			</ul>
 			
-			<table>
+			<!--<table>
 				<tr>
-					<th>Introductino to Engineering Systems 2</th>
+					<th>--><h4>Introduction to Engineering Systems 2 ---- Jan-May 2019</h4><!--</th>
 					<td>----</td>
 					<td>Jan-May 2019</td>
 				</tr>
-			</table>
+			</table>-->
 			<ul>
 				<li>Coded in MATLAB for mathematical simulations</li>
 				<li>Created intelligent database-sorting software with team</li>
@@ -117,22 +117,22 @@
 			<p><!--<em>-->Online Course Completed<!--</em>--></p>
 			<p>Basic computer network and security knowledge</p>
 			
-			<table>
+			<!--<table>
 				<tr>
-					<th>Advanced Introduction to Computer Science</th>
+					<th>--><h4>Advanced Introduction to Computer Science ---- Illinois Tech, IL ---- Aug-Dec 2019</h4><!--</th>
 					<td>----</td>
 					<td>Illinois Tech, IL</td>
 				</tr>
 				<tr>
-					<td>
+					<td>-->
 						<ul>
 							<li>Practice with Java in Eclipse and GitHub</li>
 						</ul>
-					</td>
+					<!--</td>
 					<td>----</td>
 					<td>Aug-Dec 2019</td>
 				</tr>
-			</table>
+			</table>-->
 			
 			<p><!--<strong>-->Fundamentals of Web Design<!--</strong>--></p>
 			<ul>
@@ -142,69 +142,69 @@
 		
 		<section>
 			<h2><!--<em>-->Employment<!--</em>--></h2>
-			<table>
+			<!--<table>
 				<tr>
-					<th>Company</th>
+					<th>--><p>Company -- Position -- Time of Employment -- Location</p><!--</th>
 					<th>Position</th>
 					<th>Time of Employment</th>
 					<th>Location</th>
 				</tr>
 				<tr>
-					<td>Pinstripes</td>
+					<td>--><p>Pinstripes -- Server Assistant -- Sept 2019-Present -- Chicago, IL</p><!--</td>
 					<td>Server Assistant</td>
 					<td>Sept 2019-Present</td>
 					<td>Chicago, IL</td>
 				</tr>
 				<tr>
-					<td>Capri of Downers Grove</td>
+					<td>--><p>Capri of Downers Grove -- Host/Bus Boy -- May 2019-Aug 2019 -- Downers Grove, IL</p><!--</td>
 					<td>Host/Bus Boy</td>
 					<td>May 2019-Aug 2019</td>
 					<td>Downers Grove, IL</td>
 				</tr>
 				<tr>
-					<td>South Dining Hall</td>
+					<td>--><p>South Dining Hall -- Kitchen Worker -- Aug 2018-May 2019 -- Notre Dame, IN</p><!--</td>
 					<td>Kitchen Worker</td>
 					<td>Aug 2018-May 2019</td>
 					<td>Notre Dame, IN</td>
 				</tr>
 				<tr>
-					<td>That Burger Joint</td>
+					<td>--><p>That Burger Joint -- Kitchen Worker, Cashier -- May 2018-Jan 2019 -- Downers Grove, IL</p><!--</td>
 					<td>Kitchen Worker,Cashier</td>
-					<td>May 2018-Jan-2019</td>
+					<td>May 2018-Jan 2019</td>
 					<td>Downers Grove, IL</td>
 				</tr>
-			</table>
+			</table>-->
 		</section>
 		
 		<section>
 			<h2><!--<em>-->Activities<!--</em>--></h2>
-			<table>
+			<!--<table>
 				<tr>
-					<th>Specialty</th>
+					<th>-->Specialty -- Organization -- Time Period<!--</th>
 					<th>Organization</th>
 					<th>Time Period</th>
 				</tr>
 				<tr>
-					<td><!--<em>-->Hardware<!--</em>--></td>
+					<td>--><!--<em>--><p>Hardware -- HAM Radio -- Sept 2019-Present</p><!--</em>--><!--</td>
 					<td>HAM Radio</td>
 					<td>Sept 2019-Present</td>
 				</tr>
 				<tr>
-					<td><!--<em>-->Cybersecurity<!--</em>--></td>
+					<td>--><!--<em>--><p>Cybersecurity -- Cyber Hawks -- Aug 2019-Present</p><!--</em>--><!--</td>
 					<td>Cyber Hawks</td>
 					<td>Aug 2019-Present</td>
 				</tr>
 				<tr>
-					<td><!--<em>-->Programer<!--</em>--></td>
+					<td>--><!--<em>--><p>Programer -- Free time -- 2018-Present</p><!--</em>--><!--</td>
 					<td>Free time</td>
 					<td>2018-Present</td>
 				</tr>
 				<tr>
-					<td><!--<em>-->Leader<!--</em>--></td>
+					<td>--><!--<em>--><p>Leader -- Muse Club -- Aug 2014-2018</p><!--</em>--><!--</td>
 					<td>Muse Club</td>
 					<td>Aug 2014-2018</td>
 				</tr>
-			</table>
+			</table>-->
 		</section>
 		
 		<section>
