Attempt to link html and css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Project 1</title>
+		<link href="fancy.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<nav>
@@ -13,7 +14,7 @@
 			</ul>
 		</nav>
 	
-		<header>
+		<header id="resume">
 			<h1><!--<center>-->Patrick Crowe<!--</center>--></h1>
 			<p><!--<em><center>-->pcrowe@hawk.iit.edu | (630)-841-8896<!--</center></em>--></p>
 			<p><!--<em><center>-->5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616<!--</center></em>--></p>
