--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Project 1</title>
-		<link href="fancy.css" rel="stylesheet" type="text/css" media="all">
+		<link href="style.css" rel="stylesheet" type="text/css" media="all">
 	</head>
 	<body>
 		<nav>
