--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Project 1</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
+		<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<nav>
