--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	</head>
 	<body>
 		<nav>
-			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="pictures.html">Pictures</a></li>
-				<li><a href="hobbies.html">Hobbies</a></li>
+			<ul id="navigation bar">
+				<li id="navigation item"><a href="index.html">Home</a></li>
+				<li id="navigation item"><a href="pictures.html">Pictures</a></li>
+				<li id="navigation item"><a href="hobbies.html">Hobbies</a></li>
 			</ul>
 		</nav>
 	
