--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
 		<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
 	</head>
-	<body>
+	<body id="wrapper">
 		<nav>
 			<ul id="navigation bar">
 				<li id="navigation item"><a href="index.html">Home</a></li>
