--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		
 		<section>
 			<h2><em>Education</em></h2>
-			<h3 id="school">Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
+			<h3 class="school">Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
 			<table>
 				<tr>
 					<td><p>Major: Computer Science</p></td>
@@ -37,7 +37,7 @@
 					<td>May 2022</td>
 				</tr>
 			</table>
-			<h3 id="school">Benet Academy ---- Lisle, IL ---- May 2018</h3>
+			<h3 class="school">Benet Academy ---- Lisle, IL ---- May 2018</h3>
 			<table>
 				<tr>
 					<td><p>ACT: 33</p></td>
