Made the school section relatively positioned

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</header>
 		<hr>
 		
-		<section>
+		<section style="position: relative">
 			<h2><em>Education</em></h2>
 			<h3 class="school">Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
 			<table>
