--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 	</head>
 	<body id="wrapper">
 		<nav>
-			<ul id="navigation bar">
-				<li id="navigation item"><a href="index.html">Home</a></li>
-				<li id="navigation item"><a href="pictures.html">Pictures</a></li>
-				<li id="navigation item"><a href="hobbies.html">Hobbies</a></li>
+			<ul id="navigation-bar">
+				<li id="navigation-item"><a href="index.html">Home</a></li>
+				<li id="navigation-item"><a href="pictures.html">Pictures</a></li>
+				<li id="navigation-item"><a href="hobbies.html">Hobbies</a></li>
 			</ul>
 		</nav>
 	
