Tried giving the education section a unified style

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 		</header>
 		<hr>
 		
-		<section style="position: relative">
+		<section class="education">
 			<h2><em>Education</em></h2>
-			<h3 class="school">Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
+			<h3 id="college">Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
 			<table>
 				<tr>
 					<td><p>Major: Computer Science</p></td>
@@ -37,7 +37,7 @@
 					<td>May 2022</td>
 				</tr>
 			</table>
-			<h3 class="school">Benet Academy ---- Lisle, IL ---- May 2018</h3>
+			<h3 id="high-school">Benet Academy ---- Lisle, IL ---- May 2018</h3>
 			<table>
 				<tr>
 					<td><p>ACT: 33</p></td>
