--- a/index.html
+++ b/index.html
@@ -24,32 +24,36 @@
 		
 		<section class="education">
 			<h2><em>Education</em></h2>
-			<h3 id="college">Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
-			<table>
-				<tr>
-					<td><p>Major: Computer Science</p></td>
-					<td>----</td>
-					<td>Chicago, IL</td>
-				</tr>
-				<tr>
-					<td><p>GPA: 3.6</p></td>
-					<td>----</td>
-					<td>May 2022</td>
-				</tr>
-			</table>
-			<h3 id="high-school">Benet Academy ---- Lisle, IL ---- May 2018</h3>
-			<table>
-				<tr>
-					<td><p>ACT: 33</p></td>
-					<td>----</td>
-					<td>Lisle, IL</td>
-				</tr>
-				<tr>
-					<td><p>GPA: 4.0</p></td>
-					<td>----</td>
-					<td>June 2018</td>
-				</tr>
-			</table>
+			<div id="college">
+				<h3>Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
+				<table>
+					<tr>
+						<td><p>Major: Computer Science</p></td>
+						<td>----</td>
+						<td>Chicago, IL</td>
+					</tr>
+					<tr>
+						<td><p>GPA: 3.6</p></td>
+						<td>----</td>
+						<td>May 2022</td>
+					</tr>
+				</table>
+			</div>
+			<div id="high-school">
+				<h3>Benet Academy ---- Lisle, IL ---- May 2018</h3>
+				<table>
+					<tr>
+						<td><p>ACT: 33</p></td>
+						<td>----</td>
+						<td>Lisle, IL</td>
+					</tr>
+					<tr>
+						<td><p>GPA: 4.0</p></td>
+						<td>----</td>
+						<td>June 2018</td>
+					</tr>
+				</table>
+			</div>
 		</section>
 		
 		<section>
