--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			</div>
 		</section>
 		
-		<section>
+		<section style="position: relative; float: clear;">
 			<h2><em>Experience</em></h2>
 			<table>
 				<tr>
