--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Project 1</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
-		<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
 		<nav>
@@ -147,7 +147,7 @@
 		</section>
 		
 		<section>
-			<h2><em>Employment</em></h2>
+			<h2 class="official"><em>Employment</em></h2>
 			<table>
 				<tr>
 					<th><p>Company -- Position -- Time of Employment -- Location</p></th>
