--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Project 1</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
-		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
 		<nav>
