Applied table style to tables

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		
 		<section>
 			<h2 class="official"><em>Employment</em></h2>
-			<table>
+			<table class="data">
 				<tr>
 					<th><p>Company -- Position -- Time of Employment -- Location</p></th>
 					<th>Position</th>
@@ -184,7 +184,7 @@
 		
 		<section>
 			<h2><em>Activities</em></h2>
-			<table>
+			<table class="data">
 				<tr>
 					<th>Specialty -- Organization -- Time Period</th>
 					<th>Organization</th>
