--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<section class="education">
 			<h2><em>Education</em></h2>
 			<div id="college">
-				<h3>Illinois Institute of Technology ---- Chicago, IL ---- Dec 2021</h3>
+				<h3>Illinois Institute of Technology</h3>
 				<table>
 					<tr>
 						<td><p>Major: Computer Science</p></td>
@@ -40,7 +40,7 @@
 				</table>
 			</div>
 			<div id="high-school">
-				<h3>Benet Academy ---- Lisle, IL ---- May 2018</h3>
+				<h3>Benet Academy</h3>
 				<table>
 					<tr>
 						<td><p>ACT: 33</p></td>
@@ -60,7 +60,7 @@
 			<h2><em>Experience</em></h2>
 			<table>
 				<tr>
-					<th><h4>Introduction to Engineering Systems 1 ---- Notre Dame, IN ---- Aug-Nov 2018</h4></th>
+					<th><h4>Introduction to Engineering Systems 1</h4></th>
 					<td>----</td>
 					<td>Notre Dame, IN</td>
 				</tr>
@@ -82,7 +82,7 @@
 			
 			<table>
 				<tr>
-					<th><h4>Personal Website ---- Oct 2018-Present</h4></th>
+					<th><h4>Personal Website</h4></th>
 					<td>----</td>
 					<td>Oct 2018-Present</td>
 				</tr>
@@ -95,7 +95,7 @@
 			
 			<table>
 				<tr>
-					<th><h4>Introduction to Engineering Systems 2 ---- Jan-May 2019</h4></th>
+					<th><h4>Introduction to Engineering Systems 2</h4></th>
 					<td>----</td>
 					<td>Jan-May 2019</td>
 				</tr>
@@ -125,7 +125,7 @@
 			
 			<table>
 				<tr>
-					<th><h4>Advanced Introduction to Computer Science ---- Illinois Tech, IL ---- Aug-Dec 2019</h4></th>
+					<th><h4>Advanced Introduction to Computer Science</h4></th>
 					<td>----</td>
 					<td>Illinois Tech, IL</td>
 				</tr>
@@ -150,31 +150,31 @@
 			<h2 class="official"><em>Employment</em></h2>
 			<table class="data">
 				<tr>
-					<th><p>Company -- Position -- Time of Employment -- Location</p></th>
+					<th>Company</th>
 					<th>Position</th>
 					<th>Time of Employment</th>
 					<th>Location</th>
 				</tr>
 				<tr>
-					<td><p>Pinstripes -- Server Assistant -- Sept 2019-Present -- Chicago, IL</p></td>
+					<td>Pinstripes</td>
 					<td>Server Assistant</td>
 					<td>Sept 2019-Present</td>
 					<td>Chicago, IL</td>
 				</tr>
 				<tr>
-					<td><p>Capri of Downers Grove -- Host/Bus Boy -- May 2019-Aug 2019 -- Downers Grove, IL</p></td>
+					<td>Capri of Downers Grove</td>
 					<td>Host/Bus Boy</td>
 					<td>May 2019-Aug 2019</td>
 					<td>Downers Grove, IL</td>
 				</tr>
 				<tr>
-					<td><p>South Dining Hall -- Kitchen Worker -- Aug 2018-May 2019 -- Notre Dame, IN</p></td>
+					<td>South Dining Hall</td>
 					<td>Kitchen Worker</td>
 					<td>Aug 2018-May 2019</td>
 					<td>Notre Dame, IN</td>
 				</tr>
 				<tr>
-					<td><p>That Burger Joint -- Kitchen Worker, Cashier -- May 2018-Jan 2019 -- Downers Grove, IL</p></td>
+					<td>That Burger Joint</td>
 					<td>Kitchen Worker,Cashier</td>
 					<td>May 2018-Jan 2019</td>
 					<td>Downers Grove, IL</td>
@@ -186,27 +186,27 @@
 			<h2><em>Activities</em></h2>
 			<table class="data">
 				<tr>
-					<th>Specialty -- Organization -- Time Period</th>
+					<th>Specialty</th>
 					<th>Organization</th>
 					<th>Time Period</th>
 				</tr>
 				<tr>
-					<td><em><p>Hardware -- HAM Radio -- Sept 2019-Present</p></em></td>
+					<td><em>Hardware</em></td>
 					<td>HAM Radio</td>
 					<td>Sept 2019-Present</td>
 				</tr>
 				<tr>
-					<td><em><p>Cybersecurity -- Cyber Hawks -- Aug 2019-Present</p></em></td>
+					<td><em>Cybersecurity</em></td>
 					<td>Cyber Hawks</td>
 					<td>Aug 2019-Present</td>
 				</tr>
 				<tr>
-					<td><em><p>Programer -- Free time -- 2018-Present</p></em></td>
+					<td><em>Programer</em></td>
 					<td>Free time</td>
 					<td>2018-Present</td>
 				</tr>
 				<tr>
-					<td><em><p>Leader -- Muse Club -- Aug 2014-2018</p></em></td>
+					<td><em>Leader</em></td>
 					<td>Muse Club</td>
 					<td>Aug 2014-2018</td>
 				</tr>
