Attempted centering the tables. Background-color is diff from color

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		
 		<section>
 			<h2 class="official"><em>Employment</em></h2>
-			<table class="data">
+			<table class="data"><center>
 				<tr>
 					<th>Company</th>
 					<th>Position</th>
@@ -178,13 +178,13 @@
 					<td>Kitchen Worker,Cashier</td>
 					<td>May 2018-Jan 2019</td>
 					<td>Downers Grove, IL</td>
-				</tr>
+				</center></tr>
 			</table>
 		</section>
 		
 		<section>
 			<h2><em>Activities</em></h2>
-			<table class="data">
+			<table class="data"><center>
 				<tr>
 					<th>Specialty</th>
 					<th>Organization</th>
@@ -210,7 +210,7 @@
 					<td>Muse Club</td>
 					<td>Aug 2014-2018</td>
 				</tr>
-			</table>
+			</center></table>
 		</section>
 		
 		<section>
