Had to nav name it to html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
-		<nav>
-			<ul id="navigation-bar">
-				<li id="navigation-item"><a href="index.html">Home</a></li>
-				<li id="navigation-item"><a href="pictures.html">Pictures</a></li>
-				<li id="navigation-item"><a href="hobbies.html">Hobbies</a></li>
+		<nav id="navigation-bar">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="pictures.html">Pictures</a></li>
+				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
 		</nav>
 	
