Experimenting with setting section positions relative

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
 			</ul>
 		</section>
 		
-		<section>
+		<section style="position: relative">
 			<h2 class="official"><em>Employment</em></h2>
-			<table class="data"><center>
+			<table class="data">
 				<tr>
 					<th>Company</th>
 					<th>Position</th>
@@ -178,13 +178,13 @@
 					<td>Kitchen Worker,Cashier</td>
 					<td>May 2018-Jan 2019</td>
 					<td>Downers Grove, IL</td>
-				</center></tr>
+				</tr>
 			</table>
 		</section>
 		
 		<section>
 			<h2><em>Activities</em></h2>
-			<table class="data"><center>
+			<table class="data">
 				<tr>
 					<th>Specialty</th>
 					<th>Organization</th>
@@ -210,7 +210,7 @@
 					<td>Muse Club</td>
 					<td>Aug 2014-2018</td>
 				</tr>
-			</center></table>
+			</table>
 		</section>
 		
 		<section>
