Set schools positions back to relative

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		</section>
 		
 		<section>
-			<h2><em>Activities</em></h2>
+			<h2 class="handwriting"><em>Activities</em></h2>
 			<table class="data">
 				<tr>
 					<th>Specialty</th>
@@ -213,7 +213,7 @@
 			</table>
 		</section>
 		
-		<section>
+		<section class="block">
 			<h2><em>Skills</em></h2>
 			<p><em>Computer:</em></p>
 			<p>Microsoft Office, Solidworks, Vernier Graphical Analysis, MATLAB, Java, Python, C, HTML, CSS, JavaScript, jQuery, GitHub</p>
