Added padding to block class

--- a/pictures.html
+++ b/pictures.html
@@ -7,7 +7,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body>
-		<nav id="navigation">
+		<nav id="navigation-bar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="pictures.html">Pictures</a></li>
