Made data an id for pictures

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		
 		<section style="position: relative">
 			<h2 class="official"><em>Employment</em></h2>
-			<table class="data">
+			<table id="data">
 				<tr>
 					<th>Company</th>
 					<th>Position</th>
@@ -184,7 +184,7 @@
 		
 		<section>
 			<h2 class="handwriting"><em>Activities</em></h2>
-			<table class="data">
+			<table id="data">
 				<tr>
 					<th>Specialty</th>
 					<th>Organization</th>
