Turned image break pattern into titles

--- a/pictures.html
+++ b/pictures.html
@@ -17,23 +17,22 @@
 		<hr>
 		<h1 class="official">My pictures</h1>
 		<h2 class="block">Some pictures about my life</h2>
+		<div id="image-break">
+			<p id="image-break-cap">Pet!</p>
+		</div>
 		<figure>
 			<center><img src="media/roxy.png" id="dog"></center>
 			<figcaption class="handwriting" id="data">My dog Roxy is a brat. She's a cocker spaniel, poodle mix, and she's got a tiny body with a big personaility. She loves picking fights with bigger dogs that would inevitably eat her if we, her owners, didn't stop her. She also claims her bed as her territory and gets uncomfortable when people invade her space. She's like a cat, in that she likes to be pet, but only when it's done a certain way. What she lacks in her patience, though, she makes up in cuteness. Look at her!</figcaption>
 		</figure>
 		<div id="image-break">
-			<div id="image-break-pattern"></div>
-			<div id="image-break-pattern"></div>
-			<div id="image-break-pattern"></div>
+			<p id="image-break-cap">Move!</p>
 		</div>
 		<figure>
 			<center><img src="media/trunk.JPG" id="moving"></center>
 			<figcaption class="handwriting" id="data">Now that I'm in college, all I need to live must fit in the back of a car. I always bring my comforter, bluetooth speaker, garbage can, and lots of hoodies. This year, my newest addition to the college pile is an artistic tapestry of the map of the world. I found it on the Wish app, the hub of all my impulse buys. Next on list from there are some neon lights to hang and some lucky bamboo seeds.</figcaption>
 		</figure>
 		<div id="image-break">
-			<div id="image-break-pattern"></div>
-			<div id="image-break-pattern"></div>
-			<div id="image-break-pattern"></div>
+			<p id="image-break-cap">Song!</p>
 		</div>
 		<figure>
 			<center><img src="media/spotify.PNG" id="music"></center>
