Changed bottom nav to a footer

--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
 		</video>
 		
 		<p class="idea" id="set-right">Another of hobbie of mine is surfing the web. Big surprise I wound up in a web design class, retrospectively. Here's a couple of websites I highly recommend, plus a website of my own.</p>
-		<nav id="links">
+		<footer id="links">
 			<ul>
 				<li><a href="http://www.scp-wiki.net/">The SCP Foundation</a></li>
 				<li><a href="https://neocities.org/">NeoCities</a></li>
@@ -32,7 +32,7 @@
 				<li><a href="http://seaquence.org/">Seaquence</a></li>
 				<li><a href="https://pcrowe22.github.io/Bibliotech/index.html">My Website</a></li>
 			</ul>
-		</nav>
+		</footer>
 		<p id="thank-you">Thank you for viewing!</p>
 	</body>
 </html>
