--- a/pictures.html
+++ b/pictures.html
@@ -6,7 +6,7 @@
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
 		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
 	</head>
-	<body id="wrapper">
+	<body id="fluid">
 		<nav id="navigation-bar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
