Tried fixing bottom nav and image titles

--- a/hobbies.html
+++ b/hobbies.html
@@ -24,7 +24,7 @@
 		</video>
 		
 		<p class="idea" id="set-right">Another of hobbie of mine is surfing the web. Big surprise I wound up in a web design class, retrospectively. Here's a couple of websites I highly recommend, plus a website of my own.</p>
-		<footer id="links">
+		<section id="links">
 			<ul>
 				<li><a href="http://www.scp-wiki.net/">The SCP Foundation</a></li>
 				<li><a href="https://neocities.org/">NeoCities</a></li>
