Attempt to center nav in hobbies

--- a/hobbies.html
+++ b/hobbies.html
@@ -7,13 +7,13 @@
 		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
-		<nav id="navigation-bar">
+		<nav id="navigation-bar"><center>
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="pictures.html">Pictures</a></li>
 				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
-		</nav>
+		</center></nav>
 		<hr>
 		<h1 class="official">My Hobbies</h1>
 		<p class="handwriting">I am currently working on a point and click adventure game on my own side website for fun! It is set in my hometown neighborhood, and I record scenes for it with a pair of video camera glasses I wear while I walk.</p>
@@ -32,7 +32,7 @@
 				<li><a href="http://seaquence.org/">Seaquence</a></li>
 				<li><a href="https://pcrowe22.github.io/Bibliotech/index.html">My Website</a></li>
 			</ul>
-		</footer>
+		</section>
 		<p id="thank-you">Thank you for viewing!</p>
 	</body>
 </html>
