--- a/hobbies.html
+++ b/hobbies.html
@@ -7,13 +7,13 @@
 		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
-		<nav id="navigation-bar"><center>
+		<nav id="navigation-bar">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="pictures.html">Pictures</a></li>
 				<li><a href="hobbies.html">Hobbies</a></li>
 			</ul>
-		</center></nav>
+		</nav>
 		<hr>
 		<h1 class="official">My Hobbies</h1>
 		<p class="handwriting">I am currently working on a point and click adventure game on my own side website for fun! It is set in my hometown neighborhood, and I record scenes for it with a pair of video camera glasses I wear while I walk.</p>
