removed the set-right ID from caption

--- a/hobbies.html
+++ b/hobbies.html
@@ -23,7 +23,7 @@
 			<source src="media/bird.mp4" type="video/mp4">
 		</video>
 		
-		<p class="idea" id="set-right">Another of hobbie of mine is surfing the web. Big surprise I wound up in a web design class, retrospectively. Here's a couple of websites I highly recommend, plus a website of my own.</p>
+		<p class="idea">Another of hobbie of mine is surfing the web. Big surprise I wound up in a web design class, retrospectively. Here's a couple of websites I highly recommend, plus a website of my own.</p>
 		<section id="links">
 			<ul>
 				<li><a href="http://www.scp-wiki.net/">The SCP Foundation</a></li>
