First set of changes to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Project 1</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
-		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Patua+One|Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
 		<nav id="navigation-bar">
@@ -16,9 +16,9 @@
 		</nav>
 	
 		<header id="resume">
-			<h1><center>Patrick Crowe</center></h1>
-			<p><em><center>pcrowe@hawk.iit.edu | (630)-841-8896</center></em></p>
-			<p><em><center>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</center></em></p>
+			<h1>Patrick Crowe</h1>
+			<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
+			<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 		</header>
 		<hr>
 		
@@ -60,12 +60,12 @@
 			<h2><em>Experience</em></h2>
 			<table>
 				<tr>
-					<th><h4>Introduction to Engineering Systems 1</h4></th>
+					<th>Introduction to Engineering Systems 1</th>
 					<td>----</td>
 					<td>Notre Dame, IN</td>
 				</tr>
 				<tr>
-					<td><em><h5>Controlled Descent Project, Team member</h5></em></td>
+					<td><em>Controlled Descent Project, Team member</em></td>
 					<td>----</td>
 					<td>Aug-Nov 2018</td>
 				</tr>
@@ -82,7 +82,7 @@
 			
 			<table>
 				<tr>
-					<th><h4>Personal Website</h4></th>
+					<th>Personal Website</th>
 					<td>----</td>
 					<td>Oct 2018-Present</td>
 				</tr>
@@ -95,7 +95,7 @@
 			
 			<table>
 				<tr>
-					<th><h4>Introduction to Engineering Systems 2</h4></th>
+					<th>Introduction to Engineering Systems 2</th>
 					<td>----</td>
 					<td>Jan-May 2019</td>
 				</tr>
@@ -184,7 +184,7 @@
 		
 		<section>
 			<h2 class="handwriting"><em>Activities</em></h2>
-			<table id="data">
+			<table id="data2">
 				<tr>
 					<th>Specialty</th>
 					<th>Organization</th>
