--- a/hobbies.html
+++ b/hobbies.html
@@ -4,7 +4,9 @@
 		<meta charset="UTF-8">
 		<title>Hobbies</title>
 		<link href="style.css" rel="stylesheet" type="text/css" media="all">
-		<link href="https://fonts.googleapis.com/css?family=Patua+One|Gloria+Hallelujah|Special+Elite&display=swap" rel="stylesheet">
+				<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
 	</head>
 	<body id="wrapper">
 		<nav id="navigation-bar">
