Bug fixed hobbies.html

--- a/hobbies.html
+++ b/hobbies.html
@@ -26,7 +26,7 @@
 		</video>
 		
 		<p class="idea">Another of hobbie of mine is surfing the web. Big surprise I wound up in a web design class, retrospectively. Here's a couple of websites I highly recommend, plus a website of my own.</p>
-		<section id="links">
+		<div id="links">
 			<ul>
 				<li><a href="http://www.scp-wiki.net/">The SCP Foundation</a></li>
 				<li><a href="https://neocities.org/">NeoCities</a></li>
@@ -34,7 +34,7 @@
 				<li><a href="http://seaquence.org/">Seaquence</a></li>
 				<li><a href="https://pcrowe22.github.io/Bibliotech/index.html">My Website</a></li>
 			</ul>
-		</section>
+		</div>
 		<p id="thank-you">Thank you for viewing!</p>
 	</body>
 </html>
