Made the index a bit more uniform

--- a/index.html
+++ b/index.html
@@ -16,17 +16,15 @@
 			<li><a href="hobbies.html">Hobbies</a></li>
 		</ul>
 	</nav>
-
 	<header id="resume">
 		<h1>Patrick Crowe</h1>
 		<em>pcrowe@hawk.iit.edu | (630)-841-8896</em>
 		<em>5408 Fairmount Ave, Downers Grove, IL 60515 ▪ Campus: S103 State Street Village, 3303 S State St, Chicago IL 60616</em>
 	</header>
 	<hr>
-	
-	<main class="education">
-		<h2><em>Education</em></h2>
-		<div id="college">
+	<main class="education" id="college">
+		<h2 class="official"><em>Education</em></h2>
+		<div>
 			<h3>Illinois Institute of Technology</h3>
 			<table>
 				<tr>
@@ -41,7 +39,7 @@
 				</tr>
 			</table>
 		</div>
-		<div id="high-school">
+		<div>
 			<h3>Benet Academy</h3>
 			<table>
 				<tr>
@@ -57,9 +55,8 @@
 			</table>
 		</div>
 	</main>
-	
 	<div class="experience">
-		<div><em>Experience</em></h2>
+		<div class="official"><em>Experience</em></h2>
 		<table>
 			<tr>
 				<th>Introduction to Engineering Systems 1</th>
@@ -81,7 +78,6 @@
 		<ul>
 			<li>Drafted designs of picture frame with Solidworks software</li>
 		</ul>
-		
 		<table>
 			<tr>
 				<th>Personal Website</th>
@@ -94,7 +90,6 @@
 			<li>Contains personal writing projects and code experiments</li>
 			<li><a href="https://pcrowe22.github.io/Bibliotech/index.html">Link</a></li>
 		</ul>
-		
 		<table>
 			<tr>
 				<th>Introduction to Engineering Systems 2</th>
@@ -106,25 +101,20 @@
 			<li>Coded in MATLAB for mathematical simulations</li>
 			<li>Created intelligent database-sorting software with team</li>
 		</ul>
-		
 		<p><strong>Embedded Systems and the Internet of Things</strong></p>
 		<ul>
 			<li>Physical wiring and digital programming with Arduino and C language</li>
 			<li>Built a simple electric piano using push buttons, LEDs, and piezos</li>
 		</ul>
-		
 		<p><strong>CompTIA A+</strong></p>
 		<p><em>Online Course Completed</em></p>
 		<p>Simple hardware knowledge</p>
-		
 		<p><strong>CompTIA Linux+</strong></p>
 		<p><em>Online Course Completed</em></p>
 		<p>Basic Linux knowledge</p>
-		
 		<p><strong>CompTIA Network+</strong></p>
 		<p><em>Online Course Completed</em></p>
 		<p>Basic computer network and security knowledge</p>
-		
 		<table>
 			<tr>
 				<th>Advanced Introduction to Computer Science</th>
@@ -141,13 +131,11 @@
 				<td>Aug-Dec 2019</td>
 			</tr>
 		</table>
-		
 		<p><strong>Fundamentals of Web Design</strong></p>
 		<ul>
 			<li>Practice with HTML, CSS, and JavaScript in Notepad+ and GitHub</li>
 		</ul>
 	</div>
-	
 	<div class="experience">
 		<h2 class="official"><em>Employment</em></h2>
 		<table id="data">
@@ -183,10 +171,9 @@
 			</tr>
 		</table>
 	</div>
-	
 	<div>
-		<h2 class="handwriting"><em>Activities</em></h2>
-		<table id="data2">
+		<h2 class="official"><em>Activities</em></h2>
+		<table id="data">
 			<tr>
 				<th>Specialty</th>
 				<th>Organization</th>
@@ -214,9 +201,8 @@
 			</tr>
 		</table>
 	</div>
-	
-	<div class="block">
-		<h2><em>Skills</em></h2>
+	<div id="college">
+		<h2 class="official"><em>Skills</em></h2>
 		<p><em>Computer:</em></p>
 		<p>Microsoft Office, Solidworks, Vernier Graphical Analysis, MATLAB, Java, Python, C, HTML, CSS, JavaScript, jQuery, GitHub</p>
 	</div>
