Added space in pictures.html

--- a/pictures.html
+++ b/pictures.html
@@ -19,7 +19,7 @@
 	</nav>
 	<hr>
 	<h1 class="official">My pictures</h1>
-	<h2 class="block">Some pictures about my life</h2>
+	<h2 id="college">Some pictures about my life</h2>
 	<div class="image-break">
 		<p class="image-break-cap">Pet!</p>
 	</div>
