--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		</div>
 	</main>
 	<div class="experience">
-		<div class="official"><em>Experience</em></h2>
+		<h2 class="official"><em>Experience</em></h2>
 		<table>
 			<tr>
 				<th>Introduction to Engineering Systems 1</th>
