--- a/hobbies.html
+++ b/hobbies.html
@@ -22,7 +22,7 @@
 	<p class="handwriting">I am currently working on a point and click adventure game on my own side website for fun! It is set in my hometown neighborhood, and I record scenes for it with a pair of video camera glasses I wear while I walk.</p>
 	<p id="set-right">Once on my walk I had a close encounter with a bird in flight. Check it out!</p>
 	<p class="block" id="data">I got the idea for this game when I was on a walk. Separating from indoors felt freeing, but I couldn't tell why, so I toyed with the idea of bringing the outdoors indoors. If I could do that, the juxtaposition between inside and outside might reveal some insight. My goal is to make every path I walk digital. I want to make a world feel infinite, but planned, like how I see planet earth in real life. Too many virtual worlds are infinite, but random, which feels fragile. Or the worlds that have care and attention given to them get too complicated to be very big. My strategy when I just upload pictures online gives me the freedom to continuously expand the map of our world without overloading resources.</p>
-	<video class="movie" id="data3" controls>
+	<video class="movie" controls>
 		<source src="media/bird.mp4" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>
