--- a/pictures.html
+++ b/pictures.html
@@ -19,7 +19,7 @@
 	</nav>
 	<hr>
 	<h1 class="official">My pictures</h1>
-	<h2 id="college">Some pictures about my life</h2>
+	<h2 class="education" id="college">Some pictures about my life</h2>
 	<div class="image-break">
 		<p class="image-break-cap">Pet!</p>
 	</div>
@@ -31,15 +31,15 @@
 		<p class="image-break-cap">Move!</p>
 	</div>
 	<figure>
-		<img src="media/trunk.JPG" id="moving">
-		<figcaption class="handwriting" id="data2">Now that I'm in college, all I need to live must fit in the back of a car. I always bring my comforter, bluetooth speaker, garbage can, and lots of hoodies. This year, my newest addition to the college pile is an artistic tapestry of the map of the world. I found it on the Wish app, the hub of all my impulse buys. Next on list from there are some neon lights to hang and some lucky bamboo seeds.</figcaption>
+		<img src="media/trunk.JPG" id="dog">
+		<figcaption class="handwriting">Now that I'm in college, all I need to live must fit in the back of a car. I always bring my comforter, bluetooth speaker, garbage can, and lots of hoodies. This year, my newest addition to the college pile is an artistic tapestry of the map of the world. I found it on the Wish app, the hub of all my impulse buys. Next on list from there are some neon lights to hang and some lucky bamboo seeds.</figcaption>
 	</figure>
 	<div class="image-break">
 		<p class="image-break-cap">Song!</p>
 	</div>
 	<figure>
-		<img src="media/spotify.PNG" id="music">
-		<figcaption class="handwriting" id="data3">I listen to alternative rock, but I'm constantly trying to expand my music taste. Currently, my favorite artists include Muse, Hobo Johnson, AWOLNATION, Watsky, Hozier, Electric Light Orchestra, and Steam Powered Giraffe. I took piano lessons for about 10 years and a couple years of voice lessons on top of that, but I don't really read sheet music anymore. If I want to play something, I try listening to it first and then recreating it on the piano. Chords are more fun than cadences, in my opinion.</figcaption>
+		<img src="media/spotify.PNG" id="dog">
+		<figcaption class="handwriting">I listen to alternative rock, but I'm constantly trying to expand my music taste. Currently, my favorite artists include Muse, Hobo Johnson, AWOLNATION, Watsky, Hozier, Electric Light Orchestra, and Steam Powered Giraffe. I took piano lessons for about 10 years and a couple years of voice lessons on top of that, but I don't really read sheet music anymore. If I want to play something, I try listening to it first and then recreating it on the piano. Chords are more fun than cadences, in my opinion.</figcaption>
 	</figure>
 </body>
 </html>
